header path changd

--- a/asset/component/header.html
+++ b/asset/component/header.html
@@ -18,7 +18,7 @@
         </nav>
 
         <div class="header-right">
-            <a href="../pages/cart.html" class="cart-wrapper"
+            <a href="/asset/pages/cart.html" class="cart-wrapper"
                 style="text-decoration: none; margin-right: 20px; position: relative; display: flex; color: var(--text-main);">
                 <ion-icon name="bag-handle-outline" style="font-size: 26px;"></ion-icon>
                 <span class="cart-badge"
