--- a/asset/component/header.html
+++ b/asset/component/header.html
@@ -1,6 +1,6 @@
 <header class="header blur-header">
     <div class="header-inner">
-        <a href="/index.html" class="logo">
+        <a href="index.html" class="logo">
             <div class="logo-box">
                 <ion-icon name="book-outline"></ion-icon>
             </div>
@@ -9,16 +9,16 @@
 
         <nav class="navbar">
             <ul class="nav-menu">
-                <li><a href="/index.html" class="nav-link">Home</a></li>
-                <li><a href="/aboutus.html" class="nav-link">About Us</a></li>
-                <li><a href="/asset/pages/services.html" class="nav-link">Services</a></li>
-                <li><a href="/asset/pages/shop.html" class="nav-link">Shop</a></li>
-                <li><a href="/contactus.html" class="nav-link">Contact Us</a></li>
+                <li><a href="index.html" class="nav-link">Home</a></li>
+                <li><a href="aboutus.html" class="nav-link">About Us</a></li>
+                <li><a href="asset/pages/services.html" class="nav-link">Services</a></li>
+                <li><a href="asset/pages/shop.html" class="nav-link">Shop</a></li>
+                <li><a href="contactus.html" class="nav-link">Contact Us</a></li>
             </ul>
         </nav>
 
         <div class="header-right">
-            <a href="/asset/pages/cart.html" class="cart-wrapper"
+            <a href="asset/pages/cart.html" class="cart-wrapper"
                 style="text-decoration: none; margin-right: 20px; position: relative; display: flex; color: var(--text-main);">
                 <ion-icon name="bag-handle-outline" style="font-size: 26px;"></ion-icon>
                 <span class="cart-badge"
