--- a/asset/component/header.html
+++ b/asset/component/header.html
@@ -1,23 +1,26 @@
-<header class="header blur-header">
-    <div class="header-inner">
-        <a href="index.html" class="logo">
+<header class="header blur-header" data-aos="fade-down">
+    <div class="header-inner" data-aos="fade-down" data-aos-delay="50">
+        <a href="index.html" class="logo" data-aos="zoom-in" data-aos-delay="100">
             <div class="logo-box">
                 <ion-icon name="book-outline"></ion-icon>
             </div>
             <span class="logo-text">LAUNCELOT <span>DU LAC</span></span>
         </a>
 
-        <nav class="navbar">
+        <nav class="navbar" data-aos="fade-down" data-aos-delay="150">
             <ul class="nav-menu">
-                <li><a href="index.html" class="nav-link">Home</a></li>
-                <li><a href="aboutus.html" class="nav-link">About Us</a></li>
-                <li><a href="asset/pages/services.html" class="nav-link">Services</a></li>
-                <li><a href="asset/pages/shop.html" class="nav-link">Shop</a></li>
-                <li><a href="contactus.html" class="nav-link">Contact Us</a></li>
+                <li data-aos="fade-down" data-aos-delay="170"><a href="index.html" class="nav-link">Home</a></li>
+                <li data-aos="fade-down" data-aos-delay="190"><a href="aboutus.html" class="nav-link">About Us</a></li>
+                <li data-aos="fade-down" data-aos-delay="210"><a href="asset/pages/services.html"
+                        class="nav-link">Services</a></li>
+                <li data-aos="fade-down" data-aos-delay="230"><a href="asset/pages/shop.html" class="nav-link">Shop</a>
+                </li>
+                <li data-aos="fade-down" data-aos-delay="250"><a href="contactus.html" class="nav-link">Contact Us</a>
+                </li>
             </ul>
         </nav>
 
-        <div class="header-right">
+        <div class="header-right" data-aos="fade-down" data-aos-delay="220">
             <a href="asset/pages/cart.html" class="cart-wrapper"
                 style="text-decoration: none; margin-right: 20px; position: relative; display: flex; color: var(--text-main);">
                 <ion-icon name="bag-handle-outline" style="font-size: 26px;"></ion-icon>
